<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Screen"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/applogoround"
            android:id="@+id/welcome_applogo"
            android:contentDescription="@string/welcome_content_desc_text_string"
            app:civ_border_width="0dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"/>



        <TextView
            android:id="@+id/welcome_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_string"
            android:textAlignment="center"
            style="@style/Text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />


        <Button
            android:id="@+id/welcome_startbutton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="16dp"
            android:text="@string/welcome_button_text_string"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>